Ensure code overflow is contained with a scrollbar

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -129,7 +129,8 @@ body > dl dt:not(:first-child) {
     margin-top: 25px;
 }
 
-pre {
+.entry-content .highlight pre {
+    overflow: scroll;
     padding: 20px;
 }
 
